//
// Copyright (c) 2025 Red Hat, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with
// the License. You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on
// an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
// specific language governing permissions and limitations under the License.
//

syntax = "proto3";

package private.v1;

import "google/protobuf/any.proto";
import "private/v1/metadata_type.proto";

message ClusterTemplate {
  // Public data.
  string id = 1;
  Metadata metadata = 2;
  string title = 3;
  string description = 4;
  repeated ClusterTemplateParameterDefinition parameters = 5;
  map<string, ClusterTemplateNodeSet> node_sets = 6;
}

message ClusterTemplateParameterDefinition {
  string name = 1;
  string title = 2;
  string description = 3;
  bool required = 4;
  string type = 5;
  google.protobuf.Any default = 6;
}

message ClusterTemplateNodeSet {
  string host_class = 1;
  int32 size = 2;
}
